@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.android.keepass"
-      android:versionName="1.5.6" android:versionCode="47">
+      android:versionCode="48" android:versionName="1.5.7">
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4"/>
 	<supports-screens
       android:smallScreens="true"
