@@ -1,3 +1,6 @@
+KeePassDroid (1.5.7)
+  * KeePass 2.11 compatibility fixes
+
 KeePassDroid (1.5.6)
   * Keyfile Fix
 
